--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0537682410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4b958dea10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f05373abb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f05373abd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4b95918310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4b95915dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0537915450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0537915650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4b95ee4cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4b95e807d0&gt;]</pre>
 </div>
 
 </div>
