--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdfedae3690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48fff75a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfedb27e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdfedb27fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48ff96dc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48ff95a7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdfee0b06d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdfee0b08d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49001f3450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49001ff750&gt;]</pre>
 </div>
 
 </div>
