--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f696a53b890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ed0df62d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f696a25fb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f696a25fd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ed07f8c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ed07f8e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f696a7c9490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f696a7c9690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ed1088510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ed1088710&gt;]</pre>
 </div>
 
 </div>
