--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f39d7ff3050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ab65a7150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39d7cb2e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39d7cc3110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab5f93c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ab5f93e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39d8287610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39d8287850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab6826550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ab6826750&gt;]</pre>
 </div>
 
 </div>
