--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf59fab6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c8f5b3e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf5a00da10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf5a00dc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c8f6010d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c8f5f0490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf5a57d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf5a57d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c8fbc9990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c8fb65490&gt;]</pre>
 </div>
 
 </div>
