--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdf30cde10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc85577bdd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdf3112c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdf3112e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc8554f3d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc8554f3f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdf335b510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbdf335b710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc855a5b690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc855a5b890&gt;]</pre>
 </div>
 
 </div>
