--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2ca22f710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3d8b05a990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2c9f4dbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2c9f4ddd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d8b0bfd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3d8b0bff10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2ca4b74d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2ca4b76d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d8b628590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3d8b628790&gt;]</pre>
 </div>
 
 </div>
