--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa200e6f510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f976484bf90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa20085cc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa20085ce90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f97635cfd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f97635cff90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2010ed550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2010ed750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9763e596d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9763e598d0&gt;]</pre>
 </div>
 
 </div>
