--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1be2e34dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe6e9132ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1be2832c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1be2832e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6e8e64dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6e8e64fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1be30bf590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1be30bf750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6e9737550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6e96ea890&gt;]</pre>
 </div>
 
 </div>
