--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49da35cc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ce07cf490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49da3c6b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49da3c6d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ce04e9c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ce04e9e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49da930450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49da9649d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ce0d76590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ce0d76790&gt;]</pre>
 </div>
 
 </div>
