--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e330e4890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26ab612dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e32ae3c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e32ae3e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26ab325cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26ab325ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e3336c5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e3336c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26ab88f4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26ab88f6d0&gt;]</pre>
 </div>
 
 </div>
