--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa96285e510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6dbcf0d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa962884b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa962884d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6dbcea250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6dba1ccd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa962e0d410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa962e0d610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6dc2a5450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6dc2a5650&gt;]</pre>
 </div>
 
 </div>
