--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f108c4192d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f302f46c390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f108c43bd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f108c12dd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f302ee26cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f302ee26ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f108c6f87d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f108c6966d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f302f6b8590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f302f6b8790&gt;]</pre>
 </div>
 
 </div>
