--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f17b0b950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe025efda50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f17b50c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5f17b50dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe025f41c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe025f41e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f180ba510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5f180ba6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe026187510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe026187710&gt;]</pre>
 </div>
 
 </div>
