--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa73f83f810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa3f3325b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa73f554a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa73f554c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3f3391e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa3f33850d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa73fdf0350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa73fdf0550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3f38e86d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa3f38e88d0&gt;]</pre>
 </div>
 
 </div>
