--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1edfc7bd50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9061c95310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1edfcc0dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1edfcc0f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f906167e8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9061681e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ee0228650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ee0228810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9061f07150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9061f127d0&gt;]</pre>
 </div>
 
 </div>
