--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee82856590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14ee4da8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee82549cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee82549ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14ee50ee50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14ee51a090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee82b26310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee82ad4790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f14eea79750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f14eea79950&gt;]</pre>
 </div>
 
 </div>
