--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8432c20150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29f1b56810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8432936e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8432936fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29f1870c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29f181f490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8432e9ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8432e9cc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29f1e0ce90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29f1dd8710&gt;]</pre>
 </div>
 
 </div>
