--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8202500290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda1a804550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8202553c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8202224f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda1a847d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda1a847f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8202aad6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8202b01490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda1add1650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda1add1850&gt;]</pre>
 </div>
 
 </div>
