--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffba430be90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4bb3b1fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffba4007bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffba4007e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4bb3f6ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4bb3e1110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffba4592510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffba4592750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4bb95c7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4bb95c9d0&gt;]</pre>
 </div>
 
 </div>
