--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c792a4fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8f09e8550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c792dbd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c792dbf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8f03cec50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8f03cee50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c79523610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c79523810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8f0c60550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8f0c60750&gt;]</pre>
 </div>
 
 </div>
