--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f961a25e650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdbb33d87d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9619c4bc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9619c4be90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdbb3412d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdbb3412f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f961a4dc5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f961a4dc7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdbb397b650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdbb397b850&gt;]</pre>
 </div>
 
 </div>
